--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6d215c70",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "CompletedProcess(args=['wb_command', '-version'], returncode=0)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,6 @@
     "    fsaverage_to_fslr,\n",
     "    fslr_to_fslr,\n",
     "    civet_to_fslr,\n",
-    "    mni152_to_fslr\n",
     ")\n",
     "from neuromaps.images import load_data, load_gifti\n",
     "from neuromaps.stats import compare_images  # optional, for later correlations\n",
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "b1e782b5",
    "metadata": {},
    "outputs": [
@@ -174,9 +173,9 @@
     "| **2**  | T1w/T2w Ratio (Myelin Map)                             | `hcps1200`      | `myelinmap`                | fsLR      | 32k     |\n",
     "| **3**  | Cortical Thickness                                     | `hcps1200`      | `thickness`                | fsLR      | 32k     |\n",
     "| **4**  | Developmental Expansion                                | `hill2010`      | `devexp`                   | fsLR      | 164k    |\n",
-    "| **5**  | Evolutionary Expansion (Human–Macaque)                 | `hill2010`      | `evolutionary_expansion`   | fsLR      | 32k     |\n",
-    "| **6**  | Functional Gradient (PC1)                              | `margulies2016` | `functional_gradient_pc1`  | fsLR      | 32k     |\n",
-    "| **7**  | Intersubject Variability                               | `mueller2013`   | `intersubject_variability` | fsLR      | 32k     |\n",
+    "| **5**  | Evolutionary Expansion (Human–Macaque)                 | `hill2010`      | `evoexp`   | fsLR      | 164k     |\n",
+    "| **6**  | Functional Gradient (PC1)                              | `margulies2016` | `fcgradient01`  | fsLR      | 32k     |\n",
+    "| **7**  | Intersubject Variability                               | `mueller2013`   | `intersubjvar` | fsLR      | 164k     |\n",
     "| **8**  | Cerebral Blood Flow (CBF)                              | `raichle`       | `cbf`                      | fsLR      | 164k    |\n",
     "| **9**  | Cerebral Blood Volume (CBV)                            | `raichle`       | `cbv`                      | fsLR      | 164k    |\n",
     "| **10** | Oxygen Metabolism (CMRO₂)                              | `raichle`       | `cmr02`                    | fsLR      | 164k    |\n",
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "09af3099",
    "metadata": {},
    "outputs": [
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "e9b2a582",
    "metadata": {},
    "outputs": [
@@ -272,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "02fa7ac4",
    "metadata": {},
    "outputs": [
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "5c958bda",
    "metadata": {},
    "outputs": [
@@ -342,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "60b1c174",
    "metadata": {},
    "outputs": [
@@ -357,18 +356,13 @@
       "  [primary]:\n",
       "    Jason Hill, Terrie Inder, Jeffrey Neil, Donna Dierker, John Harwell, and David Van Essen. Similar patterns of cortical expansion during human development and evolution. Proceedings of the National Academy of Sciences, 107(29):13135–13140, 2010.\n",
       "  [secondary]:\n",
-      "    \n",
-      "(32492,)\n"
+      "    \n"
      ]
     }
    ],
    "source": [
     "devexp = fetch_annotation(source='hill2010', desc='devexp', space='fsLR', den='164k')\n",
-    "devexp_fsLR = fslr_to_fslr(devexp, '32k', hemi='R')\n",
-    "devexp_rh_32k, = devexp_fsLR\n",
-    "\n",
-    "# Check data shape\n",
-    "print(devexp_rh_32k.agg_data().shape)"
+    "devexp_fsLR = fslr_to_fslr(devexp, '32k', hemi='R')"
    ]
   },
   {
@@ -382,21 +376,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "12185a84",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span><span style=\"color: #000080; text-decoration-color: #000080\">fetch_single_file</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span> Downloading data from \n",
+       "<span style=\"color: #0000ff; text-decoration-color: #0000ff; text-decoration: underline\">https://files.osf.io/v1/resources/4mw3a/providers/osfstorage/6130ff02ab8bca0212ee54f8</span> <span style=\"color: #808000; text-decoration-color: #808000\">...</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;34m[\u001b[0m\u001b[34mfetch_single_file\u001b[0m\u001b[1;34m]\u001b[0m Downloading data from \n",
+       "\u001b[4;94mhttps://files.osf.io/v1/resources/4mw3a/providers/osfstorage/6130ff02ab8bca0212ee54f8\u001b[0m \u001b[33m...\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span><span style=\"color: #000080; text-decoration-color: #000080\">fetch_single_file</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span>  <span style=\"color: #808000; text-decoration-color: #808000\">...</span>done. <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span> seconds, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span> min<span style=\"font-weight: bold\">)</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;34m[\u001b[0m\u001b[34mfetch_single_file\u001b[0m\u001b[1;34m]\u001b[0m  \u001b[33m...\u001b[0mdone. \u001b[1m(\u001b[0m\u001b[1;36m2\u001b[0m seconds, \u001b[1;36m0\u001b[0m min\u001b[1m)\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "[References] Please cite the following papers if you are using this data:\n"
+      "[References] Please cite the following papers if you are using this data:\n",
+      "\n",
+      "  For {'source': 'hill2010', 'desc': 'evoexp', 'space': 'fsLR', 'den': '164k'}:\n",
+      "  [primary]:\n",
+      "    Jason Hill, Terrie Inder, Jeffrey Neil, Donna Dierker, John Harwell, and David Van Essen. Similar patterns of cortical expansion during human development and evolution. Proceedings of the National Academy of Sciences, 107(29):13135–13140, 2010.\n",
+      "  [secondary]:\n",
+      "    \n"
      ]
     }
    ],
    "source": [
-    "evoexp = fetch_annotation(source='hill2010', desc='evolutionary_expansion', space='fsLR', den='32k')\n",
+    "evoexp = fetch_annotation(source='hill2010', desc='evoexp', space='fsLR', den='164k')\n",
     "evoexp_fsLR32k = evoexp\n"
    ]
   },
@@ -411,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "2f62d8ce",
    "metadata": {},
    "outputs": [
@@ -420,12 +450,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[References] Please cite the following papers if you are using this data:\n"
+      "[References] Please cite the following papers if you are using this data:\n",
+      "\n",
+      "  For {'source': 'margulies2016', 'desc': 'fcgradient01', 'space': 'fsLR', 'den': '32k'}:\n",
+      "  [primary]:\n",
+      "    Daniel S Margulies, Satrajit S Ghosh, Alexandros Goulas, Marcel Falkiewicz, Julia M Huntenburg, Georg Langs, Gleb Bezgin, Simon B Eickhoff, F Xavier Castellanos, Michael Petrides, and others. Situating the default-mode network along a principal gradient of macroscale cortical organization. Proc Natl Acad Sci USA, 113(44):12574–12579, 2016.\n",
+      "  [secondary]:\n",
+      "    \n"
      ]
     }
    ],
    "source": [
-    "gradient_pc1 = fetch_annotation(source='margulies2016', desc='functional_gradient_pc1', space='fsLR', den='32k')\n",
+    "gradient_pc1 = fetch_annotation(source='margulies2016', desc='fcgradient01', space='fsLR', den='32k')\n",
     "gradient_pc1_fsLR32k = gradient_pc1\n"
    ]
   },
@@ -440,30 +476,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "3911c335",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span><span style=\"color: #000080; text-decoration-color: #000080\">fetch_single_file</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span> Downloading data from \n",
+       "<span style=\"color: #0000ff; text-decoration-color: #0000ff; text-decoration: underline\">https://files.osf.io/v1/resources/4mw3a/providers/osfstorage/6130ff274e5ee50219291de1</span> <span style=\"color: #808000; text-decoration-color: #808000\">...</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;34m[\u001b[0m\u001b[34mfetch_single_file\u001b[0m\u001b[1;34m]\u001b[0m Downloading data from \n",
+       "\u001b[4;94mhttps://files.osf.io/v1/resources/4mw3a/providers/osfstorage/6130ff274e5ee50219291de1\u001b[0m \u001b[33m...\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span><span style=\"color: #000080; text-decoration-color: #000080\">fetch_single_file</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span>  <span style=\"color: #808000; text-decoration-color: #808000\">...</span>done. <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> seconds, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span> min<span style=\"font-weight: bold\">)</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;34m[\u001b[0m\u001b[34mfetch_single_file\u001b[0m\u001b[1;34m]\u001b[0m  \u001b[33m...\u001b[0mdone. \u001b[1m(\u001b[0m\u001b[1;36m1\u001b[0m seconds, \u001b[1;36m0\u001b[0m min\u001b[1m)\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span><span style=\"color: #000080; text-decoration-color: #000080\">fetch_single_file</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span> Downloading data from \n",
+       "<span style=\"color: #0000ff; text-decoration-color: #0000ff; text-decoration: underline\">https://files.osf.io/v1/resources/4mw3a/providers/osfstorage/6130ff33ab8bca0225edc685</span> <span style=\"color: #808000; text-decoration-color: #808000\">...</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;34m[\u001b[0m\u001b[34mfetch_single_file\u001b[0m\u001b[1;34m]\u001b[0m Downloading data from \n",
+       "\u001b[4;94mhttps://files.osf.io/v1/resources/4mw3a/providers/osfstorage/6130ff33ab8bca0225edc685\u001b[0m \u001b[33m...\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span><span style=\"color: #000080; text-decoration-color: #000080\">fetch_single_file</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span>  <span style=\"color: #808000; text-decoration-color: #808000\">...</span>done. <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span> seconds, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span> min<span style=\"font-weight: bold\">)</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;34m[\u001b[0m\u001b[34mfetch_single_file\u001b[0m\u001b[1;34m]\u001b[0m  \u001b[33m...\u001b[0mdone. \u001b[1m(\u001b[0m\u001b[1;36m2\u001b[0m seconds, \u001b[1;36m0\u001b[0m min\u001b[1m)\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "[References] Please cite the following papers if you are using this data:\n"
+      "[References] Please cite the following papers if you are using this data:\n",
+      "\n",
+      "  For {'source': 'mueller2013', 'desc': 'intersubjvar', 'space': 'fsLR', 'den': '164k'}:\n",
+      "  [primary]:\n",
+      "    Sophia Mueller, Danhong Wang, Michael D Fox, BT Thomas Yeo, Jorge Sepulcre, Mert R Sabuncu, Rebecca Shafee, Jie Lu, and Hesheng Liu. Individual variability in functional connectivity architecture of the human brain. Neuron, 77(3):586–595, 2013.\n",
+      "  [secondary]:\n",
+      "    \n"
      ]
     }
    ],
    "source": [
-    "isv = fetch_annotation(source='mueller2013', desc='intersubject_variability', space='fsLR', den='32k')\n",
-    "isv_fsLR32k = isv\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cad6cdba",
-   "metadata": {},
-   "source": [
-    "## Downsample from 164k → 32k"
+    "isv = fetch_annotation(source='mueller2013', desc='intersubjvar', space='fsLR', den='164k')\n",
+    "isv_fsLR32k = fslr_to_fslr(isv, target_density='32k')"
    ]
   },
   {
@@ -477,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "598b68a3",
    "metadata": {},
    "outputs": [
@@ -512,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "7ed99aca",
    "metadata": {},
    "outputs": [
@@ -547,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "284710eb",
    "metadata": {},
    "outputs": [
@@ -582,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "f0c9b341",
    "metadata": {},
    "outputs": [
@@ -608,14 +702,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c7d270f",
-   "metadata": {},
-   "source": [
-    "## CIVET → fsLR 32k"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f83fc62e",
    "metadata": {},
    "source": [
@@ -625,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2b6e69fe",
    "metadata": {},
    "outputs": [
@@ -660,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "a0062b70",
    "metadata": {},
    "outputs": [
