--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -408,6 +408,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94c6845d",
+   "metadata": {},
+   "source": [
+    "This map shows the **first principal component (PC1)** of **cortical gene expression** projected onto the **fsLR 32k surface**, capturing the main spatial pattern of molecular variation across the cortex.\n",
+    "\n",
+    "**PC1 of gene expression** summarizes how genes vary together spatially—regions with similar expression patterns load similarly on this component. It often reflects a **molecular gradient** from **sensory–motor areas** to **association cortices**, linking underlying biology to cortical specialization.\n",
+    "\n",
+    "In this map, **warm colors (yellow/orange)** represent **higher PC1 loadings**, indicating regions with stronger expression of genes contributing positively to this component, while **cool colors (purple)** show **lower loadings** or opposing expression patterns.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8bb31602",
    "metadata": {},
    "source": [
@@ -486,6 +498,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c41c0cbf",
+   "metadata": {},
+   "source": [
+    "This map shows the **T1w/T2w ratio** projected onto the **fsLR 32k surface**, which serves as an MRI-based measure of **cortical myelination**.\n",
+    "\n",
+    "**Myelination** is the process of coating nerve fibers with a fatty layer called **myelin**, allowing electrical signals to travel faster and more efficiently between brain regions.\n",
+    "\n",
+    "In the map, **warm colors (red/yellow)** indicate areas with **higher T1w/T2w ratios**, meaning greater myelin content, typically in **primary sensory and motor regions**. **Cool colors (blue/green)** represent **lower ratios**, found in **association and prefrontal cortices**. This reflects the brain’s **myelin gradient**, from fast, highly myelinated areas to slower, integrative regions involved in complex cognition.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "652f5409",
    "metadata": {},
    "source": [
@@ -519,14 +543,6 @@
     "devexp = fetch_annotation(source='hill2010', desc='devexp', space='fsLR', den='164k')\n",
     "print(type(devexp), devexp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bda9ed6a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -641,6 +657,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "15e2688c",
+   "metadata": {},
+   "source": [
+    "This map shows **developmental expansion** projected onto the **fsLR 32k cortical surface**, illustrating how much each brain region expands during development.\n",
+    "\n",
+    "**Developmental expansion** refers to how certain cortical areas grow more in surface area or volume as the brain matures. Regions that expand more are often linked to **higher cognitive functions**, like planning and reasoning, while less expanding regions are associated with **basic sensory and motor processing**.\n",
+    "\n",
+    "In this map, **warm colors (orange/red)** mark **greater expansion**, mainly in association cortices, and **cool colors (blue)** show **less expansion**, typically in primary sensory and motor areas. This pattern reflects how the brain develops from early-maturing sensorimotor regions to later-developing association regions involved in complex thought.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f8a8dcb3",
    "metadata": {},
    "source": [
@@ -742,6 +770,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cad21e6",
+   "metadata": {},
+   "source": [
+    "This map shows **evolutionary expansion** projected onto the **fsLR 32k cortical surface**, representing how much different cortical regions have expanded over the course of primate evolution.\n",
+    "\n",
+    "**Evolutionary expansion** compares the size of cortical areas in humans to those in non-human primates. Regions that have expanded the most are associated with **higher-order cognition**, language, and abstract reasoning, while less expanded regions are tied to **sensory and motor processing** shared across species.\n",
+    "\n",
+    "In this map, **warm colors (orange/red)** indicate **greater evolutionary expansion**, mainly in association cortices such as the prefrontal and temporal areas. **Cool colors (blue)** show **less expansion**, seen in early-developing sensory and motor regions. This pattern reflects how evolution has prioritized the growth of brain areas involved in complex thought and social behavior.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d52548ac",
    "metadata": {},
    "source": [
@@ -817,6 +857,18 @@
     "    vmin=-5.4, vmax=6.8\n",
     ")\n",
     "fig8.suptitle('Functional gradient fsLR 32k', y=0.98)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acf61efc",
+   "metadata": {},
+   "source": [
+    "This map shows the **functional gradient** projected onto the **fsLR 32k cortical surface**, capturing large-scale organization of brain activity.\n",
+    "\n",
+    "A **functional gradient** describes how patterns of connectivity transition smoothly across the cortex, from regions involved in **basic sensory and motor processing** to those supporting **higher-order, integrative cognition**.\n",
+    "\n",
+    "In this map, **warm colors (red/yellow)** represent areas at the **higher end of the gradient**, such as the default mode and association networks that integrate abstract information. **Cool colors (blue)** mark regions at the **lower end**, corresponding to primary sensory and motor areas with more specialized, unimodal processing. This gradient reflects the brain’s shift from concrete perception to complex thought.\n"
    ]
   },
   {
@@ -917,6 +969,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "70fb1159",
+   "metadata": {},
+   "source": [
+    "This map shows **intersubject variability** on the **fsLR 32k cortical surface**, indicating how much brain organization differs across individuals.\n",
+    "\n",
+    "**Intersubject variability** measures how consistent or diverse functional patterns are between people. Regions with **low variability** are highly similar across individuals, while **high variability** regions show greater differences in connectivity or function.\n",
+    "\n",
+    "In this map, **warm colors (orange)** represent **higher variability**, typically in association cortices like the prefrontal and temporal regions involved in complex cognition and social processing. **Cool colors (blue)** indicate **lower variability**, found in sensory and motor areas that are more structurally and functionally conserved across people.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ec050ff",
    "metadata": {},
    "source": [
@@ -1009,6 +1073,18 @@
     "    vmin=4600, vmax=7000\n",
     ")\n",
     "fig12.suptitle('Cerebral blood flow fsLR 32k', y=0.98)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a614b1",
+   "metadata": {},
+   "source": [
+    "This map shows **cerebral blood flow (CBF)** projected onto the **fsLR 32k cortical surface**, representing how much blood is delivered to different regions of the brain.\n",
+    "\n",
+    "**Cerebral blood flow** reflects local **metabolic and neural activity**, since active brain areas require more oxygen and nutrients. Regions with **higher CBF** are more metabolically active, while **lower CBF** indicates reduced activity or energy demand.\n",
+    "\n",
+    "In this map, **warm colors (red/yellow)** show **higher blood flow**, typically in association areas that support complex cognitive processes. **Cool colors (green/blue)** indicate **lower blood flow**, often in sensory and motor regions with more stable baseline activity.\n"
    ]
   },
   {
@@ -1109,6 +1185,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "215b5116",
+   "metadata": {},
+   "source": [
+    "This map shows **cerebral blood volume (CBV)** projected onto the **fsLR 32k cortical surface**, illustrating how much blood is contained within brain tissue at a given time.\n",
+    "\n",
+    "**Cerebral blood volume** reflects the **amount of vascularization** in each region, closely tied to metabolic demands and neural activity. Areas with higher CBV have denser blood vessel networks that support greater energy needs.\n",
+    "\n",
+    "In this map, **warm colors (red/yellow)** represent **higher CBV**, indicating regions with rich vascular supply, while **cool colors (blue/purple)** show **lower CBV**, corresponding to areas with less blood volume or lower baseline metabolism.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "09e8690a",
    "metadata": {},
    "source": [
@@ -1201,6 +1289,18 @@
     "    vmin=4000, vmax=7500\n",
     ")\n",
     "fig16.suptitle('Oxygen metabolism fsLR 32k', y=0.98)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62706ee8",
+   "metadata": {},
+   "source": [
+    "This map shows **oxygen metabolism** projected onto the **fsLR 32k cortical surface**, reflecting how much oxygen different regions of the brain consume.\n",
+    "\n",
+    "**Oxygen metabolism** measures the brain’s **energy use**, since active neurons require oxygen to produce ATP, the cell’s energy source. Regions with higher oxygen metabolism are more energetically demanding and typically support complex processing.\n",
+    "\n",
+    "In this map, **warm colors (red/yellow)** represent **higher oxygen consumption**, indicating regions with greater metabolic activity. **Cool colors (blue/purple)** show **lower oxygen metabolism**, found in areas with reduced baseline energy use or simpler functional roles.\n"
    ]
   },
   {
@@ -1301,6 +1401,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9db6ad8a",
+   "metadata": {},
+   "source": [
+    "This map shows **glucose metabolism** projected onto the **fsLR 32k cortical surface**, indicating how much glucose different brain regions use as an energy source.\n",
+    "\n",
+    "**Glucose metabolism** reflects the brain’s **energy consumption**, since glucose is its main fuel for supporting neural activity. Areas that engage in complex processing or have dense synaptic activity require more glucose to sustain function.\n",
+    "\n",
+    "In this map, **warm colors (red/yellow)** represent **higher glucose metabolism**, typically in association cortices that support cognition and integration of information. **Cool colors (green/blue)** show **lower glucose use**, found in sensory and motor areas with lower baseline energy demands.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f83fc62e",
    "metadata": {},
    "source": [
@@ -1397,6 +1509,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d872c2c7",
+   "metadata": {},
+   "source": [
+    "This map shows **allometric scaling (NIH)** projected onto the **fsLR 32k cortical surface**, representing how different brain regions scale in size relative to overall brain growth.\n",
+    "\n",
+    "**Allometric scaling** describes how the size or structure of a region changes as total brain size increases. Regions with higher scaling values grow disproportionately larger in bigger brains, suggesting increased investment in certain functions like association and integrative processing.\n",
+    "\n",
+    "In this map, **warm colors (red)** indicate **greater allometric scaling**, meaning those areas expand more rapidly relative to brain size, typically in higher-order cortical regions. **Cool colors (blue)** mark **lower scaling**, seen in early-developing sensory and motor areas that scale more proportionally.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3d8535ab",
    "metadata": {},
    "source": [
@@ -1489,6 +1613,18 @@
     "    vmin=0, vmax=1.7\n",
     ")\n",
     "fig22.suptitle('Allometric scaling (PNC) fsLR 32k', y=0.98)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea1c67a8",
+   "metadata": {},
+   "source": [
+    "This map shows **allometric scaling (PNC)** projected onto the **civet 41k cortical surface**, illustrating how regional brain size changes relative to overall brain size in the **Philadelphia Neurodevelopmental Cohort (PNC)** dataset.\n",
+    "\n",
+    "**Allometric scaling** measures how certain regions expand or contract disproportionately as total brain size varies across individuals. Regions that scale up more strongly are thought to support **higher cognitive or integrative functions**, while regions that scale proportionally relate to **basic sensory or motor processing**.\n",
+    "\n",
+    "In this map, **warm colors (red)** indicate **greater scaling**, meaning those areas expand faster with brain size, often in association cortices. **Cool colors (blue)** represent **lower scaling**, where growth is more proportional, typically in early-developing sensory regions.\n"
    ]
   },
   {
@@ -1938,7 +2074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
